--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
             <button class="tab-button active" onclick="switchTab('main', event)">メイン</button>
             <button class="tab-button" onclick="switchTab('oripa-management', event)">オリパ管理</button>
             <button class="tab-button" onclick="switchTab('prize-list', event)">景品マスター</button>
-            <button class="tab-button" onclick="switchTab('temporary-prize-list', event)">📝 仮装景品</button>
+            <button class="tab-button" onclick="switchTab('temporary-prize-list', event)" style="display: none;">📝 仮装景品</button>
         </div>
 
         <!-- メインタブコンテンツ -->
