--- a/index.html
+++ b/index.html
@@ -4860,6 +4860,19 @@
             });
         }
 
+        // HTMLエスケープ関数
+        function escapeHtml(text) {
+            if (!text) return '';
+            const map = {
+                '&': '&amp;',
+                '<': '&lt;',
+                '>': '&gt;',
+                '"': '&quot;',
+                "'": '&#039;'
+            };
+            return text.toString().replace(/[&<>"']/g, (m) => map[m]);
+        }
+
         // 景品一覧を更新（景品マスターを表示）
         function updatePrizeMasterList() {
             const listContainer = document.getElementById('prizeMasterList');
